--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">获取麦块联机服务器文件直链</h1>
-        <h2 class="mb-4">因为源API有跨域限制使用杏花CDN进行中转</h2>
+        <h4 class="mb-4">因为源API有跨域限制使用<a href="https://cdn.xinghua.fit/" target="_blank">杏花CDN</a>进行中转</h4>
         <form id="apiForm">
             <div class="mb-3">
                 <label for="url" class="form-label">实例ID</label>
                 <input type="text" class="form-control" id="sid" placeholder="6972c429" required>
             </div>
             <div class="mb-3">
-                <label for="authorization" class="form-label">API密钥</label>
+                <label for="authorization" class="form-label">API密钥<a href="https://minekuai.com/account/api" target="_blank">获取API密钥</a></label>
                 <input type="text" class="form-control" id="authorization" placeholder="ptlc_dhjSiFP9BJOA996cbAC38nXIjxO8ftuSuYiWEyw2077" required>
             </div>
             <div class="mb-3">
